--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:background="@drawable/background"
     android:padding="10dp"
-    tools:context=".signin">
+    tools:context=".SignUpActivity">
 
 
     <LinearLayout
