--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="match_parent" android:layout_width="match_parent">
-
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/facebookPage"
@@ -16,7 +15,7 @@
 
         <menu>
             <item
-                android:id="@+id/nav_rate"
+                android:id="@+id/logout"
                 android:icon="@drawable/ic_person"
                 android:title="logout"/>
 
