--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -1,9 +1,114 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddProductsActivity">
+    android:fitsSystemWindows="true"
+    tools:context=".NavigationActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/appBarLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolBar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                app:layout_scrollFlags="scroll|enterAlways" />
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <RelativeLayout
+            android:id="@+id/relativeLayout"
+            android:paddingTop="80dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <EditText
+                android:id="@+id/product_name"
+                android:layout_centerHorizontal="true"
+                android:layout_width="350dp"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:hint="Product Name" />
+
+            <EditText
+                android:id="@+id/product_description"
+                android:layout_width="350dp"
+                android:layout_height="200dp"
+                android:layout_below="@id/product_name"
+                android:layout_centerHorizontal="true"
+                android:gravity="start"
+                android:inputType="textMultiLine"
+                android:hint="Product Description" />
+
+            <LinearLayout
+                android:id="@+id/price_holder"
+                android:layout_width="350dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/product_description"
+                android:layout_centerHorizontal="true">
+
+                <EditText
+                    android:layout_weight="1"
+                    android:id="@+id/product_price"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:hint="Product Price" />
+
+                <EditText
+                    android:layout_weight="1"
+                    android:id="@+id/product_discount"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="number"
+                    android:hint="Product Discount(%)" />
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/image_select_button"
+                android:layout_width="350dp"
+                android:layout_below="@+id/price_holder"
+                android:layout_centerHorizontal="true"
+                android:text="Choose Image"
+                android:layout_height="wrap_content" />
+
+            <ProgressBar
+                android:layout_below="@id/image_select_button"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/upload_progress"
+                android:visibility="gone"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="350dp"
+                android:layout_height="wrap_content" />
+
+            <Button
+                android:id="@+id/upload_button"
+                android:layout_width="350dp"
+                android:layout_below="@+id/upload_progress"
+                android:layout_centerHorizontal="true"
+                android:text="Upload"
+                android:layout_height="wrap_content" />
+
+        </RelativeLayout>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:menu="@menu/navigation_menu" />
+</androidx.drawerlayout.widget.DrawerLayout>
