--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -20,4 +20,15 @@
         </menu>
     </item>
 
+    <item android:title="Admin" android:id="@+id/admin_menu" android:visible="false">
+        <menu>
+            <item
+                android:id="@+id/all_products"
+                android:title="All Products"/>
+            <item
+                android:id="@+id/add_product"
+                android:title="Add Product"/>
+        </menu>
+    </item>
+
 </menu>
