--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -5,22 +5,23 @@
     android:layout_height="180dp"
     android:background="@drawable/background"
     android:fitsSystemWindows="true"
-    android:gravity="center"
+    android:paddingTop="20dp"
+    android:paddingLeft="20dp"
     android:orientation="vertical">
     <de.hdodenhof.circleimageview.CircleImageView
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_image"
         android:layout_width="96dp"
         android:layout_height="96dp"
-        android:src="@drawable/profile"
+        android:src="@drawable/profilenew"
         app:civ_border_width="2dp"
-        app:civ_border_color="#FFFFFF"/>
+        app:civ_border_color="#B8DCD2"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:gravity="center_horizontal"
+        android:gravity="left"
         android:text="@string/app_name"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@android:color/white" />
