--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -2,24 +2,34 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="match_parent" android:layout_width="match_parent">
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/facebookPage"
+            android:id="@+id/wishlist"
             android:icon="@drawable/ic_person"
-            android:title="facebook" />
+            android:title="Wishlist"/>
+
         <item
             android:id="@+id/instagramPage"
             android:icon="@drawable/ic_person"
-            android:title="instagram" />
+            android:title="Edit Profile" />
+        <item
+            android:id="@+id/share"
+            android:icon="@drawable/ic_person"
+            android:title="Share"/>
+        <item
+            android:id="@+id/facebookPage"
+            android:icon="@drawable/ic_person"
+            android:title="About Us" />
+
         <item
             android:id="@+id/logout"
-            android:icon="@drawable/ic_person"
+            android:icon="@drawable/logout"
             android:title="logout"/>
     </group>
 
     <item android:title="Menu">
         <menu>
             <item
-                android:id="@+id/logout"
-                android:icon="@drawable/ic_person"
+                android:id="@+id/Logout"
+                android:icon="@drawable/logout"
                 android:title="logout"/>
         </menu>
     </item>
