--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -2,22 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:id="@+id/navigation_header"
     android:layout_height="180dp"
     android:background="@drawable/background"
-    android:fitsSystemWindows="true"
-    android:paddingTop="20dp"
+    android:orientation="vertical"
     android:paddingLeft="20dp"
-    android:orientation="vertical">
-    <de.hdodenhof.circleimageview.CircleImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:paddingTop="40dp">
+
+    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profile_image"
         android:layout_width="96dp"
         android:layout_height="96dp"
         android:src="@drawable/profilenew"
-        app:civ_border_width="2dp"
-        app:civ_border_color="#B8DCD2"/>
+        app:civ_border_color="#B8DCD2"
+        app:civ_border_width="2dp" />
 
     <TextView
+        android:id="@+id/profile_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
