--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -2,27 +2,22 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" android:layout_height="match_parent" android:layout_width="match_parent">
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/homePage"
+            android:icon="@drawable/ic_person"
+            android:title="Home" />
+        <item
             android:id="@+id/facebookPage"
             android:icon="@drawable/ic_person"
-            android:title="facebook" />
+            android:title="Facebook" />
         <item
             android:id="@+id/instagramPage"
             android:icon="@drawable/ic_person"
-            android:title="instagram" />
+            android:title="Instagram" />
         <item
             android:id="@+id/logout"
             android:icon="@drawable/ic_person"
-            android:title="logout"/>
+            android:title="Logout"/>
     </group>
-
-    <item android:title="Menu">
-        <menu>
-            <item
-                android:id="@+id/logout"
-                android:icon="@drawable/ic_person"
-                android:title="logout"/>
-        </menu>
-    </item>
 
     <item android:title="Admin" android:id="@+id/admin_menu" android:visible="false">
         <menu>
