--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -8,7 +8,7 @@
     tools:context=".Productdetails">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -27,7 +27,7 @@
 
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/product_cat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
@@ -41,21 +41,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView10"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:background="@drawable/ic_cat_bg1"
-            android:gravity="center"
-            android:text="Lotion"
-            android:textColor="#80938F"
-            android:textSize="15sp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView7"
-            app:layout_constraintStart_toEndOf="@+id/textView7"
-            app:layout_constraintTop_toTopOf="@+id/textView7" />
-
-        <TextView
-            android:id="@+id/textView11"
+            android:id="@+id/product_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -63,57 +49,67 @@
             android:text="Japanese Cherry Blossom"
             android:textColor="#80938F"
             android:textSize="20sp"
-            app:layout_constraintEnd_toStartOf="@+id/textView12"
-            app:layout_constraintStart_toStartOf="@+id/textView7"
-            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+            app:layout_constraintEnd_toStartOf="@+id/product_price"
+            app:layout_constraintStart_toStartOf="@+id/product_cat"
+            app:layout_constraintTop_toBottomOf="@+id/product_cat" />
 
         <TextView
-            android:id="@+id/textView12"
+            android:id="@+id/product_price"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="24dp"
             android:text="$ 15.00"
             android:textColor="#42995C"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="@+id/textView11"
+            app:layout_constraintBottom_toBottomOf="@+id/product_name"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textView11" />
+            app:layout_constraintTop_toTopOf="@+id/product_name" />
 
         <TextView
-            android:id="@+id/textView13"
+            android:id="@+id/product_description"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:lineSpacingExtra="2dp"
             android:text="A moisturizing body with a sweet and refreshing aroma of Japanese cherry blossom, peony, musk, and strawberry. Will make the skin feel moist and smooth. The combination also makes long-lasting fragrance."
             android:textColor="#80938F"
-            app:layout_constraintEnd_toEndOf="@+id/textView12"
-            app:layout_constraintStart_toStartOf="@+id/textView11"
-            app:layout_constraintTop_toBottomOf="@+id/textView11" />
+            app:layout_constraintEnd_toEndOf="@+id/product_price"
+            app:layout_constraintStart_toStartOf="@+id/product_name"
+            app:layout_constraintTop_toBottomOf="@+id/product_name" />
 
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:layout_constraintBottom_toBottomOf="parent"
     android:gravity="center_horizontal"
-    android:paddingBottom="20dp">
-        <Button
-            android:id="@+id/button2"
-            android:layout_width="180dp"
-            android:layout_height="80dp"
-            android:background="#80938F"
-            android:drawableRight="@drawable/ic_arrow_forward_black_24dp1"
-            android:padding="16dp"
-            android:paddingRight="16dp"
-            android:text="Add to Wishlist"
-            android:textAllCaps="false"
-            android:textColor="#FFFFFF" />
+    android:layout_marginBottom="40dp">
+    <Button
+        android:id="@+id/wishlistButton"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:background="#80938F"
+        android:layout_marginRight="5dp"
+        android:padding="16dp"
+        android:paddingRight="16dp"
+        android:text="Wishlist"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF" />
+    <Button
+        android:id="@+id/contactDealerButton"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:background="#80938F"
+        android:padding="16dp"
+        android:paddingRight="16dp"
+        android:text="Contact Dealer"
+        android:textAllCaps="false"
+        android:textColor="#FFFFFF" />
 </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageView
-        android:id="@+id/imageView7"
+        android:id="@+id/product_image"
         android:layout_width="256dp"
         android:layout_height="300dp"
         android:layout_marginTop="16dp"
