--- a/app/src/main/res/layout/activity_wishlist.xml
+++ b/app/src/main/res/layout/activity_wishlist.xml
@@ -32,14 +32,11 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/aboutus"
-                android:inputType="textMultiLine"
-                android:layout_marginTop="20dp"
-                android:gravity="center"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/wishlist_products"
+                android:scrollbars="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="asdkljalkdjalskdjlaksjdlkasdjladjlkasjdklasjdkl"/>
+                android:layout_height="wrap_content"/>
 
         </RelativeLayout>
 
