--- a/app/src/main/res/layout/all_products_layout.xml
+++ b/app/src/main/res/layout/all_products_layout.xml
@@ -6,12 +6,19 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/product_name"
         android:layout_weight="1"
-        android:text="Product Name"
-        android:textStyle="bold"
+        android:id="@+id/product_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="No items!"/>
+
+    <TextView
+        android:layout_gravity="center"
+        android:id="@+id/noItems"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No items!"/>
 
     <Button
         android:id="@+id/delete_button"
