--- a/app/src/main/res/layout/activity_wishlist.xml
+++ b/app/src/main/res/layout/activity_wishlist.xml
@@ -38,6 +38,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
+            <TextView
+                android:layout_gravity="center"
+                android:textAlignment="center"
+                android:visibility="gone"
+                android:id="@+id/noItems"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="No items!"/>
+
         </RelativeLayout>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
